# edc-adverse-event

./: .gitignore  .pre-commit-config.yaml  .project  .travis.yml  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.tests.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml
adverse_event_app/: admin.py  models.py  mommy_recipes.py
docs/: conf.py  index.rst  requirements.txt
edc_adverse_event/: __init__.py  auth_objects.py  auths.py  choices.py  constants.py  signals.py  utils.py
edc_adverse_event/action_items/: __init__.py  ae_followup_action.py  ae_initial_action.py  ae_susar_action.py  ae_tmg_action.py  death_report_action.py  death_report_tmg_action.py  death_report_tmg_second_action.py
edc_adverse_event/auth_objects/: tmg.py
edc_adverse_event/form_validator_mixins/: death_report_form_validator.py
edc_adverse_event/form_validators/: __init__.py  ae_followup.py
edc_adverse_event/forms/: __init__.py
edc_adverse_event/model_mixins/: __init__.py  death_report_tmg_model_mixin.py
edc_adverse_event/model_mixins/ae_followup/: ae_followup_model_mixin.py
edc_adverse_event/model_mixins/ae_initial/: ae_initial_fields_model_mixin.py  ae_initial_model_mixin.py
edc_adverse_event/model_mixins/ae_special_interest/: aesi_model_mixin.py
edc_adverse_event/model_mixins/ae_susar/: ae_susar_model_mixin.py
edc_adverse_event/model_wrappers/: __init__.py  death_report_model_wrapper.py
edc_adverse_event/modeladmin_mixins/: ae_followup.py  ae_initial.py  ae_initial_admin_mixin.py  ae_susar.py  ae_tmg.py  death_report.py  death_report_admin_mixin.py  death_report_tmg.py  hospitalization.py  list_filters.py  modeladmin_mixins.py
edc_adverse_event/modelform_mixins/: ae_tmg_modelform_mixin.py
edc_adverse_event/pdf_reports/: ae_report.py  death_pdf_report.py  death_report.py
edc_adverse_event/templatetags/: edc_adverse_event_extras.py
edc_adverse_event/tests/etc/: django_crypto_fields
edc_adverse_event/view_utils/: tmg_button.py
edc_adverse_event/views/: home_view.py
edc_pdf_reports/templates/: death_report_pdf_button.html
tests/: test_settings.py
(+19 files in other folders)
