[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "_version.py"

[tool.black]
line-length = 95
target-version = ["py312"]
extend-exclude = '''^(.*\/)*\b(migrations)\b($|\/.*$)'''

[tool.isort]
profile = "black"
py_version = "312"
skip = [".tox", ".eggs", "migrations", "_version.py"]

[tool.coverage.run]
parallel = false
branch = true
source = ["edc_adverse_event"]

[tool.coverage.paths]
source = ["edc_adverse_event"]

[tool.coverage.report]
show_missing = true
skip_covered = true
omit = ["requirements.txt"]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
]

[tool.tox]
envlist = [
    "py312-dj52",
    "py312-djdev",
    "py313-dj52",
    "py313-djdev",
    "lint",
    "pre-commit"
]
isolated_build = true

[tool.tox.gh-actions]
python = [
  "3.12: py312, lint, pre-commit",
  "3.13: py313"
]

[tool.tox.gh-actions.env]
DJANGO = [
  "5.2: dj52, lint, pre-commit",
  "dev: djdev"
]

[tool.tox.envs.default]
deps = [
    "-r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/tox.txt",
    "-r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/test_utils.txt",
    "-r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/edc.txt",
    "dj52: Django>=5.2,<5.3",
    "djdev: https://github.com/django/django/tarball/main"
]
commands = [
    "pip install -U pip",
    "python --version",
    "pip --version",
    "pip freeze",
    "coverage run -a runtests.py",
    "coverage report"
]

[tool.tox.envs.lint]
deps = ["-r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/lint.txt"]
commands = [
    "python --version",
    "pip --version",
    "pip freeze",
    "isort --profile=black --check --diff .",
    "black --check --diff .",
    "flake8 ."
]

[tool.tox.envs.pre-commit]
deps = ["pre-commit"]
commands = [
    "python --version",
    "pip --version",
    "pip freeze",
    "pre-commit run --all-files"
]
